[package]
name = "imxrt-boot-gen"
version = "0.3.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true
description = """
Generate data structures for booting iMXRT processors.
"""

[workspace.package]
authors = ["Ian McIntyre <ianpmcintyre@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/imxrt-rs/imxrt-boot-gen"
categories = [
    "embedded",
    "hardware-support",
    "no-std",
]
keywords = [
    "arm",
    "cortex-m",
    "imxrt",
    "nxp",
]

[features]
imxrt1010 = []
imxrt1020 = []
imxrt1060 = []
imxrt1064 = []
imxrt1170 = []

[package.metadata.docs.rs]
features = ["imxrt1060"]
default-target = "thumbv7em-none-eabihf"

[workspace]
members = [
    "fcbs/*",
]
