[package]
name = "imxrt-boot-gen"
version = "0.4.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true
description = """
Generate data structures for booting iMXRT processors.
"""
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/imxrt-rs/imxrt-boot-gen"
categories = [
    "embedded",
    "hardware-support",
    "no-std",
]
keywords = [
    "arm",
    "cortex-m",
    "imxrt",
    "nxp",
]

[features]
imxrt1010 = []
imxrt1020 = []
imxrt1040 = []
imxrt1050 = []
imxrt1060 = []
imxrt1064 = []
imxrt1160 = []
imxrt1170 = []
imxrt1180 = []

[package.metadata.docs.rs]
features = ["imxrt1060"]
default-target = "thumbv7em-none-eabihf"

[workspace]
members = [
    "fcbs/*",
]
