[package]
name = "imxrt1010evk-fcb"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true
description = "FlexSPI configuration block for NXP's IMXRT1010EVK"

[dependencies.imxrt-boot-gen]
version = "0.3"
path = "../.."
features = ["imxrt1010"]

[lib]
path = "lib.rs"
