[package]
name = "imxrt1060evk-fcb"
version = "0.2.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true
description = "FlexSPI configuration block for NXP's IMXRT1060EVK"

[dependencies.imxrt-boot-gen]
version = "0.4.0"
path = "../.."

[lib]
path = "lib.rs"
