[package]
name = "imxrt1170evk-fcb"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies.imxrt-boot-gen]
version = "0.2"
path = "../.."
features = ["imxrt1170"]

[lib]
path = "lib.rs"
