[package]
name = "imxrt1170evk-fcb"
version = "0.2.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true
description = "FlexSPI configuration block for NXP's IMXRT1170EVK"

[dependencies.imxrt-boot-gen]
version = "0.4.0"
path = "../.."
features = ["imxrt1170"]

[lib]
path = "lib.rs"
